Source/WebCore/style/StyleResolveTree.cpp
@@ -984,8 +984,6 @@ void resolveTree(Document& document, Change change)
         Style::Change documentChange = determineChange(documentStyle.get(), document.renderView()->style());
         if (documentChange != NoChange)
             document.renderView()->setStyle(WTF::move(documentStyle));
-        else
-            documentStyle.dropRef();
     }
 
     Element* documentElement = document.documentElement();
